--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         ВАЖНО: Вставьте сюда URL-адрес вашего опубликованного веб-приложения Google Apps Script.
         Это должна быть ссылка вида /exec.
     -->
-    <iframe src="ССЫЛКА_НА_ВАШЕ_ВЕБ_ПРИЛОЖЕНИЕ_GOOGLE_APPS_SCRIPT"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbzVHqXRRYMHEft5pOHmXJKjkUL4rzmtNmvV5q9F1lo87eojo3_eKcYJZvZpJw3NEgq3/exec"></iframe>
 
 </body>
 </html>
