--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             border: none;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J3051K39DM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J3051K39DM');
+</script>
 </head>
 <body>
 
